# Nexus_backend

nexus_backend/: .env.example  .env.test  .gitignore  .pre-commit-config.yaml  .ruff_test_header.txt  Dockerfile  LICENSE  Makefile  README.md  conftest.py  diff.txt  docker-compose.test.env  docker-compose.test.yml  manage.py  package-lock.json  package.json  playwright.config.ts  pyproject.toml  pytest.ini  requirements-dev.txt  requirements.txt  sonar-project.properties  stash.patch  tailwind.config.js
nexus_backend/.pre-commit-cache/: db.db
nexus_backend/api/: api_helpers.py  tests.py  urls.py  views.py
nexus_backend/app_settings/: extra_charge_views.py  urls.py  views.py
nexus_backend/backoffice/: urls.py  views.py
nexus_backend/billing_management/: apps.py  billing_helpers.py  billing_services.py  urls.py  views.py
nexus_backend/client_app/: client_helpers.py  context_processors.py  serializers.py  urls.py  views.py
nexus_backend/customers/: CUSTOMER_ACTIONS_README.md  tests.py  urls.py  views.py
nexus_backend/dashboard_bi/: apps.py  urls.py  views.py
nexus_backend/docs/: ARPTC_LICENSE_FIELD_ADDITION.md  BACKEND_IMPLEMENTATION_SUMMARY.md  COMPANY_SETTINGS_PERSISTENCE_FIX.md  DOCUMENTATION_REORGANIZATION.md  FILE_NAMING_CLEANUP.md  FINAL_REORGANIZATION_SUMMARY.md  FINAL_SUMMARY.md  FIX_SIGNATURE_STAMP_DISPLAY.md  INDEX.md  INVOICE_COMPANY_SETTINGS_INTEGRATION.md  LANGUAGE_CONVENTION.md  PROJECT_FINAL_SUMMARY.md  REORGANISATION_REUSSIE.md  ROOT_FILES_REORGANIZATION_COMPLETE.md  ROOT_FILES_REORGANIZATION_PLAN.md  TEST_REORGANIZATION_COMPLETE.md  TEST_REORGANIZATION_PLAN.md  TEST_REORGANIZATION_SUCCESS.md  audit_codex_report.md
nexus_backend/feedbacks/: __init__.py  admin.py  apps.py  models.py  notifications.py  permissions.py  serializers.py  services.py  signals.py  tasks.py  urls.py  views.py
nexus_backend/geo_regions/: apps.py  models.py  serializers.py  urls.py  views.py
nexus_backend/kyc_management/: apps.py  models.py  urls.py  views.py
nexus_backend/main/: admin.py  calculations.py  factories.py  flexpaie.py  forms.py  invoices_helpers.py  models.py  phonenumber.py  tests.py  twilio_helpers.py  urls.py  views.py
nexus_backend/nexus_backend/: asgi.py  ca.crt  celery.py  middleware.py  settings.py  storage_backend.py  tests.py  urls.py  wsgi.py
nexus_backend/orders/: tests.py  urls.py  views.py
nexus_backend/promotions/: coupons.py  services.py
(+448 files in other folders)
